[MODORDERS-1103] - Update UnOpenCompositeOrderManager::deleteHoldings to use tenantId parameter